# mmx

./: .gitignore  BOUNTY_TEST_2.txt  BUSINESS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.bak  Cargo.toml.bak2  Cargo.toml.prepatch  Dockerfile  LICENSE  MMXV  MMXV1  MMXV10  MVX105  README.md  README.md.bak.before_homebrew_fix  RELEASE_CHECKLIST.md  apply_doctor_manifest_patches.py  apply_doctor_manifest_patches_v2.py  aurora_tool.py  auto_repair_tier0.py  build_mmx_remux1_v2.sh  build_mmx_remux_v2.sh  cut.aurx  doctor_remux_patch.sh  final_repair_tier0.py  fix_all_gst_now.py  fix_backend_gst_scope.py  fix_backend_gst_scope_v2.py  fix_cli_and_gst_final.py  fix_cli_runargs_block.py  fix_doctor_remux.sh  fix_doctor_remux_option_ok.sh  fix_execute_wiring_minimal.py  fix_gst_opts_binding.py  fix_mmx_cli.sh  fix_opts_scope_and_cli_types.py  fix_remux_map_loop.sh  (+108 more)
.cargo/: config.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: feature_request.yml  join_program.yml  sample_intake.yml
.github/workflows/: auto_onboard_from_issue.yml  auto_pay_on_issue_close.yml  auto_pay_on_pr_merge.yml  ci.yml  join_autoreply.yml  release.yml
Formula/: mmx-remux.rb
MMXHydra/: requirements.txt  video_gui_pro7.py
docs/: GO_TO_MARKET.md  TRAINING.md
fixtures/: out.mkv
logs/: server.out
mmx-cli/: Cargo.toml  Cargo.toml.bak.1760188381  Cargo.toml.bak_cli_fix  Cargo.toml.bak_fix  remux.rs
mmx-cli/src/: compat_main.rs  main.rs.bak  main.rs.pre_fix
mmx-cli/tests/: help_smoke.rs
mmx-core/: Cargo.toml  Cargo.toml.bak  build.rs
mmx-core/src/: backend.rs.bak  backend.rs.bak_fix  backend.rs.pre_fix  backend.rs.prepatch  backend_gst.rs.bak  backend_gst.rs.bak_ok  ladder.rs  lib.rs  output_muxer.rs  probe.rs  qc.rs.prepatch
mmx-core/tests/: core_smoke.rs
mmx/mmx-cli/: Cargo.toml
out_dash/: chunk-stream0-00001.m4s  chunk-stream0-00002.m4s  init-stream0.m4s  stream.mpd
public/: dashboard.html
revenue/: monthly_revenue.csv
scripts/: apply_roadmap_v1.sh  auto_pr_macos_ci.sh  docker_build.sh  env_arch.sh  homebrew_tap.sh  mmx_release.sh  mmx_release.sh.bak.1760111220  mmx_release.sh.bak.1760111571  mmx_release_extras.sh  pack_hls.sh  package_universal.sh  protect_branch.sh  qc_psnr_ssim.sh  release_core.sh  release_phase3.sh  run-player-pro7.sh  smoke_gen_fixture_mp4.sh  smoke_remux_mp4_to_mkv.sh  smoke_samples.sh  smoke_tier0.sh  stripe_setup.sh  test_smoke.sh
(+25 files in other folders)
