[package]
name = "mmx-cli"
version = "0.2.2"
edition = "2021"
license = "0BSD"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
which = "6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
mmx-core = { path = "../mmx-core" }
regex = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
axum = "0.7"

[dev-dependencies]
assert_cmd = "2"

[[bin]]
name = "mmx"
path = "src/main.rs"

[[bin]]
name = "mmx-compat"
path = "src/compat_main.rs"
