[package]
name = "mmx-cli"
version = "0.2.0"
edition = "2021"
# Only build bins we explicitly list below.
autobins = false

license = "MIT"
[dependencies]
anyhow = "1.0"
gstreamer = "0.24.2"
# Enable the containers/codecs we need. (Note: feature is "isomp4", not "mp4".)
symphonia = { version = "0.5.5", features = [
  "isomp4",  # MP4/MOV
  "mkv",     # Matroska
  "ogg",
  "wav",
  "flac",
  "aac",
  "mp3",
  "alac",
  "pcm"
]}

[[bin]]
name = "mmx-remux"
path = "src/bin/mmx-remux.rs"
