[package]
name = "mmx-core"
version = "0.2.3"
edition = "2021"
license = "0BSD"

[features]
gst = ["gstreamer", "gstreamer-video", "gstreamer-pbutils"]
vt = []
vaapi = []
nvenc = []
qsv = []
qc-metrics = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
gstreamer = { version = "0.22", optional = true }
gstreamer-video = { version = "0.22", optional = true }
gstreamer-pbutils = { version = "0.22", optional = true }
which = "6"
time = { version = "0.3", features = ["formatting"] }
regex = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
